timeFlies widget: Pause/Resume

--- a/index.html
+++ b/index.html
@@ -23,7 +23,11 @@
         {
           name: "app",
           location: locationPath + "app"
-        }
+        }, {
+        name: "react-raw-html",
+        location: "./node_modules/",
+        main: "react-raw-html.min"
+      }
       ]
     };
   </script>
