--- a/index.html
+++ b/index.html
@@ -13,9 +13,6 @@
   <link rel="stylesheet" href="https://s3-us-west-1.amazonaws.com/patterns.esri.com/files/calcite-web/1.0.0-rc.7/css/calcite-web.min.css">
   <script src="https://s3-us-west-1.amazonaws.com/patterns.esri.com/files/calcite-web/1.0.0-rc.7/js/calcite-web.min.js"></script>
 
-  <link rel="stylesheet" href="https://js.arcgis.com/4.5/esri/css/main.css">
-  <link rel="stylesheet" href="https://dojotoolkit.org/reference-guide/1.10/_static/js/dijit/themes/claro/claro.css"> <!-- https://js.arcgis.com/4.4/dijit/themes/claro/claro.css"> -->
-
   <script>
     var locationPath = location.pathname.replace(/\/[^\/]+$/, "/");
     window.dojoConfig = {
@@ -31,7 +28,10 @@
       ]
     };
   </script>
-  <script src="https://js.arcgis.com/4.5/"></script>
+
+  <link rel="stylesheet" href="https://dojotoolkit.org/reference-guide/1.10/_static/js/dijit/themes/claro/claro.css"> <!-- https://js.arcgis.com/4.4/dijit/themes/claro/claro.css"> -->
+  <link rel="stylesheet" href="https://js.arcgis.com/4.7/esri/css/main.css">
+  <script src="https://js.arcgis.com/4.7"></script>
 </head>
 
 <body>    
@@ -41,6 +41,8 @@
   </div> -->
 
   <div id="viewDiv"></div>
+  <div id="title" class="delayed-visible dom25d">Tectonic plates</div>
+  <div id="description" class="delayed-visible dom25d">The dataset presents tectonic plates and their boundaries, and in addition orogens and information about the boundaries. The data is useful for geological applications, analysis and education, and should be easy to use in any modern GIS software application.</div>
   <mark class="label label-yellow">This thing does not work in Internet Explorer.</mark>
   <script>require(["app/main"]);</script>
 </body>
