CSS file renamed

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="initial-scale=1,maximum-scale=1,user-scalable=no">
   <title>[blu:]tour</title>
 
-  <link rel="stylesheet" href="blu.css">
+  <link rel="stylesheet" href="timeFlies.css">
 
   </style>
 
@@ -40,6 +40,7 @@
     <div class="loader-text">Loading...</div>
   </div> -->
 
+  <div id="homeDiv"></div>
   <div id="viewDiv"></div>
   <div id="title" class="delayed-visible dom25d">Tectonic plates</div>
   <div id="description" class="delayed-visible dom25d">The dataset presents tectonic plates and their boundaries, and in addition orogens and information about the boundaries. The data is useful for geological applications, analysis and education, and should be easy to use in any modern GIS software application.</div>
